[package]
name = "project-euler-rust"
version = "0.1.0"
authors = ["davis <davisschenk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solver = {path = "pkg/solver"}
prime = {path = "pkg/prime"}

[lib]
name = "common"
path = "src/common.rs"